[tool.poetry]
name = "aitrader"
version = "0.1.0"
description = ""
authors = ["hamashousf <hamashous.f@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.12"
ray = "^2.6.2"
psutil = "^5.9.5"
pynvml = "^11.5.0"
pandas = "^2.0.3"
numpy = ">=1.22,<=1.24.3"
scipy = "^1.11.1"
opencv-python = "^4.8.0.74"
pillow = "^10.0.0"
scikit-learn = "^1.3.0"
gymnasium = "^0.29.0"
pygame = "^2.5.0"
gym-anytrading = "^1.3.2"
gym-mtsim = "^1.3.0"
seaborn = "^0.12.2"
tensorboard = "^2.13.0"
matplotlib = "^3.7.2"
nevergrad = "^0.11.0"
tensorflow = "^2.13.0"
keras = "^2.13.1"
tensorflow-probability = "^0.21.0"
torch = {version = "^2.0.1+cu118", source = "torch_cu118"}
torchvision = {version = "^0.15.2+cu118", source = "torch_cu118"}
torchaudio = {version = "^2.0.2+cu118", source = "torch_cu118"}
torchinfo = "^1.8.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.0"


[[tool.poetry.source]]
name = "torch_cu118"
url = "https://download.pytorch.org/whl/cu118"
priority = "explicit"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
